Fixed container name.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Title</title>
   <link rel="stylesheet" href="static/css/font-awesome.min.css">
   <style type="text/css">
-    .container {
+    .main-container {
         display: flex;
         flex-direction: column;
         flex-grow: 1;
@@ -36,7 +36,7 @@
   </style>
 </head>
 <body>
-  <div id="player" class="container">
+  <div id="player" class="main-container">
     <div class="js-video-container video-container"></div>
     <div class="button-container">
       <div class="button-element">
