--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         line-height: 1.5;
         margin: 5px;
         padding: 5px;
+        width: 20px;
     }
   </style>
 </head>
@@ -45,8 +46,8 @@
         <div class="player-control-button js-pause-button" hidden><i class="fa fa-pause" aria-hidden="true"></i></div>
       </div>
       <div class="player-group-of-buttons">
-        <div class="player-control-button js-volume-button"><i class="fa fa-volume-up" aria-hidden="true"></i></div>
-        <div class="player-control-button js-mute-button" hidden><i class="fa fa-volume-off" aria-hidden="true"></i></div>
+        <div class="player-control-button js-volume-button"><i class="fa fa-volume-off" aria-hidden="true"></i></div>
+        <div class="player-control-button js-mute-button" hidden><i class="fa fa-volume-up" aria-hidden="true"></i></div>
       </div>
       <div class="player-group-of-buttons" style="float: right">
         <div class="player-control-button js-fullscreen-button fa fa-expand"></div>
