--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         width: 800px;
         height: 600px;
         box-shadow: 0px 0px 20px rgba(20, 20, 20, 1);
+        font-size: 0;
     }
     .player-video-container {
         flex-grow: 3;
